--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
 	"version": "1.0.0",
 	"author": "swyx <swyx@dontemail.me>",
 	"dependencies": {
+		"babel-plugin-styled-components": "^1.10.7",
 		"gatsby": "^2.13.35",
+		"gatsby-plugin-anchor-links": "^1.1.1",
 		"gatsby-plugin-react-helmet": "^3.1.2",
+		"gatsby-plugin-sass": "^2.3.12",
+		"gatsby-plugin-styled-components": "^3.3.10",
 		"netlify-lambda": "^1.6.0",
+		"node-sass": "^4.14.1",
 		"react": "^16.8.6",
 		"react-async-script": "^0.9.1",
 		"react-dom": "^16.8.6",
-		"react-helmet": "^5.2.1"
+		"react-helmet": "^5.2.1",
+		"smooth-scroll": "^16.1.3",
+		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
 		"dotenv": "^5.0.1"
