--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-dom": "^16.8.6",
 		"react-helmet": "^5.2.1",
 		"smooth-scroll": "^16.1.3",
-		"styled-components": "^5.1.1"
+		"styled-components": "^5.1.1",
+		"tiny-slider-react": "^0.5.3"
 	},
 	"devDependencies": {
 		"dotenv": "^5.0.1"
