--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
 		"babel-plugin-styled-components": "^1.10.7",
 		"gatsby": "^2.13.35",
 		"gatsby-plugin-anchor-links": "^1.1.1",
+		"gatsby-plugin-layout": "^1.3.10",
 		"gatsby-plugin-react-helmet": "^3.1.2",
 		"gatsby-plugin-sass": "^2.3.12",
 		"gatsby-plugin-styled-components": "^3.3.10",
+		"i18next": "^19.6.3",
+		"i18next-browser-languagedetector": "^6.0.0",
+		"i18next-xhr-backend": "^3.2.2",
 		"netlify-lambda": "^1.6.0",
 		"node-sass": "^4.14.1",
 		"react": "^16.8.6",
@@ -18,6 +22,7 @@
 		"react-burger-menu": "^2.7.1",
 		"react-dom": "^16.8.6",
 		"react-helmet": "^5.2.1",
+		"react-i18next": "^11.7.0",
 		"smooth-scroll": "^16.1.3",
 		"styled-components": "^5.1.1",
 		"tiny-slider-react": "^0.5.3"
