--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
 	"version": "1.0.0",
 	"author": "swyx <swyx@dontemail.me>",
 	"dependencies": {
-		"@loadable/component": "^5.13.1",
-		"babel-plugin-styled-components": "^1.10.7",
-		"gatsby": "^2.13.35",
-		"gatsby-plugin-anchor-links": "^1.1.1",
-		"gatsby-plugin-layout": "^1.3.10",
-		"gatsby-plugin-react-helmet": "^3.1.2",
-		"gatsby-plugin-sass": "^2.3.12",
-		"gatsby-plugin-styled-components": "^3.3.10",
-		"i18next": "^19.6.3",
-		"i18next-browser-languagedetector": "^6.0.0",
+		"@loadable/component": "5.14.1",
+		"babel-plugin-styled-components": "1.12.0",
+		"gatsby": "2.27.5",
+		"gatsby-plugin-anchor-links": "1.2.0",
+		"gatsby-plugin-layout": "1.5.0",
+		"gatsby-plugin-react-helmet": "3.5.0",
+		"gatsby-plugin-sass": "2.6.0",
+		"gatsby-plugin-styled-components": "3.5.0",
+		"i18next": "19.8.4",
+		"i18next-browser-languagedetector": "6.0.1",
 		"i18next-xhr-backend": "^3.2.2",
-		"netlify-lambda": "^1.6.0",
-		"node-sass": "^4.14.1",
-		"react": "^16.8.6",
-		"react-async-script": "^0.9.1",
-		"react-burger-menu": "^2.7.1",
-		"react-dom": "^16.8.6",
-		"react-helmet": "^5.2.1",
-		"react-i18next": "^11.7.0",
+		"netlify-lambda": "2.0.1",
+		"node-sass": "4.14.1",
+		"react": "17.0.1",
+		"react-async-script": "1.2.0",
+		"react-burger-menu": "2.9.2",
+		"react-dom": "17.0.1",
+		"react-helmet": "6.1.0",
+		"react-i18next": "11.7.3",
 		"smooth-scroll": "^16.1.3",
-		"styled-components": "^5.1.1",
+		"styled-components": "5.2.1",
 		"tiny-slider-react": "^0.5.3"
 	},
 	"devDependencies": {
-		"dotenv": "^5.0.1"
+		"dotenv": "8.2.0"
 	},
 	"keywords": [
 		"gatsby"
