--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
     "react-i18next": "11.7.3",
+    "react-smooth-scrollbar": "^8.0.6",
     "smooth-scroll": "^16.1.3",
+    "smooth-scrollbar": "^8.6.0",
     "styled-components": "5.2.1",
     "tiny-slider-react": "^0.5.3"
   },
